--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 @import url(sections/header.css);
+@import url(sections/filter.css);
 
 /*Шрифты*/
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,600&display=swap');
 
 .container {
-    padding: 0 15px;
+    max-width: 1200px;
+    margin: 0 auto;
     font-family: Fira Sans;
     font-weight: bold;
+    color: black;
+    font-weight: normal;
 }
-
-body
