Тоже самое что и предыдущая версия
Подправил адаптив (совсем чуть чуть)

--- a/css/sections/filter.css
+++ b/css/sections/filter.css
@@ -209,6 +209,11 @@ div option {
     display: none;
 }
 
+@media (max-width: 950px) {
+    .chekbox_part_wrappper .input_checkbox {
+        width: 100%;
+    }
+}
 
 
 
