--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -94,7 +94,7 @@ header .add_ads:hover, .filter_button:hover {
 .nav_wrapper {
     padding: 95px 15px 0px;
     font-family:  Fira Sans;
-    border-bottom: 1px solid #C9CDCE;
+/*    border-bottom: 1px solid #C9CDCE;*/
 
 }
 
