--- a/css/sections/content.css
+++ b/css/sections/content.css
@@ -20,6 +20,7 @@
 .main_content .content_item{ 
     padding: 10px;
    width: 100%;
+    box-sizing: border-box;
 }
 
 .main_content .content_item a{
